--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -43,6 +43,7 @@
         <tr>
           <th scope="col">Short URL ID</th>
           <th scope="col">Long URL</th>
+          <th scope="col">Edit</th>
           <th scope="col">Delete</th>
         </tr>
       </thead>
@@ -52,6 +53,10 @@
             <td><%= id %></td>
             <td><%= urls[id] %></td>
             <td>
+              <a href="/urls/<%= id %>" class="btn btn-outline-primary">Edit</a>
+            </td>
+            <td>
+              <!-- added form method for each URL created that creates a delete button -->
               <form method="POST" action="/urls/<%= id %>/delete"style= "display: inline;">
                 <button type="submit" class="btn btn-outline-danger">Delete</button>
               </form>
