--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -18,5 +18,16 @@
         <a class="nav-item nav-link" href="/urls/new">Create New URL</a>
       </div>
     </div>
+    <!-- Added form to post login  -->
+    <form action="/login" method="POST" >
+      <input type="text" name="username" placeholder="username">
+      <button type="submit">Login</button>
+    </form>
+
   </nav>
 </header>
+
+<!-- // input for username
+// submit button
+// action attribute set to /login
+// method is POST -->
