--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -19,10 +19,12 @@
       </div>
     </div>
     <!-- Added form to post login  -->
-    <form action="/login" method="POST" >
-      <input type="text" name="username" placeholder="username">
-      <button type="submit">Login</button>
-    </form>
+     <div>
+       <form action="/login" method="POST" >
+         <input type="text" name="username" placeholder="username">
+         <button type="submit">Login</button>
+       </form>
+     </div>
 
   </nav>
 </header>
