--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -20,8 +20,9 @@
     </div>
     <!-- Added form to post login  -->
      <div>
-       <form action="/login" method="POST" >
-         <input type="text" name="username" placeholder="username">
+       <form action="/login" method="POST" >\
+        <label for="username">UserName</label>
+         <input type="text" name="username" placeholder="username" required>
          <button type="submit">Login</button>
        </form>
      </div>
