--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -24,7 +24,7 @@
       <!-- checks if username exists -->
       <% if (username) { %>
         <!-- if logged in, show user who you're logged in as and display logout button -->
-        <p>Logged in as: <%= username %>!</p>
+        <p>Logged in as: <%= user.email %>!</p>
         <form action="/logout" method="POST">
           <button type="submit">Logout</button>
         </form>
@@ -38,5 +38,44 @@
        <% } %>
      </div>
 
+  </nav>
+</header>
+
+
+<header>
+  <nav class="navbar navbar-expand-md navbar-dark bg-success">
+    <a class="navbar-brand" href="/urls">TinyApp</a>
+    <button
+      class="navbar-toggler"
+      type="button"
+      data-toggle="collapse"
+      data-target="#navbarNavAltMarkup"
+      aria-controls="navbarNavAltMarkup"
+      aria-expanded="false"
+      aria-label="Toggle navigation"
+    >
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+      <div class="navbar-nav">
+        <a class="nav-item nav-link" href="/urls">My URLs</a>
+        <a class="nav-item nav-link" href="/urls/new">Create New URL</a>
+      </div>
+    </div>
+    <!-- Check if user exists -->
+    <div>
+      <% if (user) { %>
+        <p>Logged in as: <%= user.email %>!</p>  <!-- Access user.email -->
+        <form action="/logout" method="POST">
+          <button type="submit">Logout</button>
+        </form>
+      <% } else { %>
+        <form action="/login" method="POST">
+          <label for="email">Email</label>
+          <input type="email" name="email" placeholder="Email" required>
+          <button type="submit">Login</button>
+        </form>
+      <% } %>
+    </div>
   </nav>
 </header>
