--- a/views/register.ejs
+++ b/views/register.ejs
@@ -8,10 +8,10 @@
 <body>
   <form action="/register" method="POST" >
     <label for="email">Email</label>
-    <input type="email" name="email" id="email" required>
+    <input type="email" name="email" placeholder="Enter your email" required>
 
     <label for="password">Password</label>
-    <input type="password" name="password" id="password" required>
+    <input type="password" name="password" placeholder="Enter your password" required>
     
     <button type="submit">Register</button>
   </form>
