added header partials to all templates missing it

--- a/views/register.ejs
+++ b/views/register.ejs
@@ -6,6 +6,7 @@
   <title>Register</title>
 </head>
 <body>
+  <%- include('partials/_header') %>
   <form action="/register" method="POST" >
     <label for="email">Email</label>
     <input type="email" name="email" placeholder="Enter your email" required>
