--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -13,6 +13,7 @@
     <title>TinyApp</title>
 </head>
 <body>
+  <%- include('partials/_header') %>
   <header>
     <nav class="navbar navbar-expand-md navbar-dark bg-success">
       <a class="navbar-brand" href="/urls">TinyApp</a>
