--- a/views/login.ejs
+++ b/views/login.ejs
@@ -8,7 +8,7 @@
 <body>
   <%- include('partials/_header') %>
 
-  <form action="/register" method="POST" >
+  <form action="/login" method="POST" >
     <label for="email">Email</label>
     <input type="email" name="email" placeholder="Enter your email" required>
 
