--- a/views/login.ejs
+++ b/views/login.ejs
@@ -16,15 +16,19 @@
 <body>
   <%- include('partials/_header') %>
 
-  <form action="/login" method="POST" >
-    <label for="email">Email</label>
-    <input type="email" name="email" placeholder="Enter your email" required>
-
-    <label for="password">Password</label>
-    <input type="password" name="password" placeholder="Enter your password" required>
-    
-    <button type="submit">Login</button>
-  </form>
+  <main style="margin: 1em";>
+    <form action="/login" method="POST" >
+      <div>
+        <label for="email">Email</label>
+        <input type="email" name="email" placeholder="Enter your email" required>
+      </div>
+      <div>
+        <label for="password">Password</label>
+        <input type="password" name="password" placeholder="Enter your password" required>
+      </div>
+      <button type="submit">Login</button>
+    </form>
+  </main>
 
   <script
   src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
