--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -19,7 +19,7 @@
       </div>
     </div>
     <!-- Added form to post login  -->
-     <div>
+     <div class="navbar-nav ml-auto">
 
       <!-- checks if username exists -->
       <% if (user) { %>
