--- a/views/login.ejs
+++ b/views/login.ejs
@@ -17,16 +17,17 @@
   <%- include('partials/_header') %>
 
   <main style="margin: 1em";>
+    <h3>Login</h3>
     <form action="/login" method="POST" >
-      <div>
-        <label for="email">Email</label>
-        <input type="email" name="email" placeholder="Enter your email" required>
+      <div class="form-group mb-2">
+        <label for="email">Email address</label>
+        <input type="email" class="form-control" style="width: 300px; margin: 1em;" name="email" placeholder="Enter your email" required>
       </div>
-      <div>
+      <div class="form-group mb-2">
         <label for="password">Password</label>
-        <input type="password" name="password" placeholder="Enter your password" required>
+        <input type="password" name="password" placeholder="Enter your password" class="form-control" style="width: 300px; margin: 1em;">
       </div>
-      <button type="submit">Login</button>
+      <button type="submit" class="btn btn-primary">Login</button>
     </form>
   </main>
 
