--- a/views/register.ejs
+++ b/views/register.ejs
@@ -18,12 +18,12 @@
     <h3>Create account</h3>
     <form action="/register" method="POST" >
       <div class="form-group mb-2">
-        <label for="email">Email address:</label>
+        <label for="email">Email address</label>
         <input class="form-control" style="width: 300px; margin: 1em;" type="email" name="email" placeholder="Enter email" required>
       </div>
   
       <div class="form-group mb-2">
-        <label for="password">Password:</label>
+        <label for="password">Password</label>
         <input class="form-control" style="width: 300px; margin: 1em;" type="password" name="password" placeholder="Enter your password" required>
       </div>
 
