--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -29,7 +29,7 @@
         <% for (let id in urls) { %>
           <tr>
             <td><%= id %></td>
-            <td><%= urls[id] %></td>
+            <td><%= urls[id].longURL %></td>
             <td>
               <!-- created edit text column that allows access to urls_shows page  -->
               <a href="/urls/<%= id %>" class="btn btn-outline-primary">Edit</a>
